Updates to allow the run command to work and made some changes to the file extensions. Also enables intelij support